<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightGrey"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:text="@string/Title"
        android:background="@color/CadetBlue"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:layout_marginBottom="20sp"
        />
    <TextView
        android:id="@+id/resultText"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:textSize="20sp"
        android:layout_marginBottom="50sp"
        android:textColor="@color/black"
        android:text=" " />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minHeight="35sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="75sp"
            android:layout_weight="1"
            android:backgroundTint="@color/CadetBlue"
            android:text="@string/Button1"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="75sp"
            android:layout_weight="1"
            android:backgroundTint="@color/CadetBlue"
            android:text="@string/Button2"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="75sp"
            android:layout_weight="1"
            android:backgroundTint="@color/CadetBlue"
            android:text="@string/Button3"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonplus"
            android:layout_width="wrap_content"
            android:layout_height="75sp"
            android:layout_weight="1"
            android:backgroundTint="@color/CadetBlue"
            android:text="@string/Buttonplus"
            android:textColor="@color/black"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/CadetBlue"
        android:minHeight="35sp"
        android:orientation="horizontal"
        android:textColor="@color/black"
        android:textSize="30sp">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="75sp"
            android:layout_weight="1"
            android:backgroundTint="@color/CadetBlue"
            android:text="@string/Button4"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="75sp"
            android:layout_weight="1"
            android:backgroundTint="@color/CadetBlue"
            android:text="@string/Button5"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="75sp"
            android:layout_weight="1"
            android:backgroundTint="@color/CadetBlue"
            android:text="@string/Button6"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonminus"
            android:layout_width="wrap_content"
            android:layout_height="75sp"
            android:layout_weight="1"
            android:backgroundTint="@color/CadetBlue"
            android:text="@string/Buttonminus"
            android:textColor="@color/black"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="75sp"
        android:layout_gravity="center"
        android:backgroundTint="@color/CadetBlue"
        android:minHeight="35sp"
        android:orientation="horizontal"
        android:textColor="@color/black"
        android:textSize="30sp">

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="75sp"
            android:layout_weight="1"
            android:backgroundTint="@color/CadetBlue"
            android:text="@string/Button7"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="75sp"
            android:layout_weight="1"
            android:backgroundTint="@color/CadetBlue"
            android:text="@string/Button8"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="75sp"
            android:layout_weight="1"
            android:backgroundTint="@color/CadetBlue"
            android:text="@string/Button9"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonmultiply"
            android:layout_width="wrap_content"
            android:layout_height="75sp"
            android:layout_weight="1"
            android:backgroundTint="@color/CadetBlue"
            android:text="@string/Buttonmultipy"
            android:textColor="@color/black"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minHeight="35sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonC"
            android:layout_width="wrap_content"
            android:layout_height="75sp"
            android:layout_weight="1"
            android:backgroundTint="@color/CadetBlue"
            android:text="@string/ButtonC"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="75sp"
            android:layout_weight="1"
            android:backgroundTint="@color/CadetBlue"
            android:text="@string/Button0"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonequal"
            android:layout_width="wrap_content"
            android:layout_height="75sp"
            android:layout_weight="1"
            android:backgroundTint="@color/CadetBlue"
            android:text="@string/Buttonequal"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttondivide"
            android:layout_width="wrap_content"
            android:layout_height="75sp"
            android:layout_weight="1"
            android:backgroundTint="@color/CadetBlue"
            android:text="@string/Buttondivide"
            android:textColor="@color/black"
            android:textSize="30sp" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonadvance"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/CadetBlue"
        android:textColor="@color/black"
        android:text="@string/Buttonadvance" />
    <TextView
        android:id="@+id/historyText"
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:maxLines="10"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="\n"
        android:layout_gravity="center_horizontal">

    </TextView>

</LinearLayout>
